# ord

./: Cargo.toml  justfile
crates/ordinals/: Cargo.toml
crates/ordinals/src/: runestone.rs  varint.rs
deploy/: setup
src/: inscriptions.rs  lib.rs
src/inscriptions/: envelope.rs  inscription.rs  media.rs
